Capture cross-module code coverage in sonar